# rust-experiment

./: .gitignore  Cargo.toml  README.md  compose.yaml  pnpm-workspace.yaml  setup-dev.sh
control-panel/: package.json
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/sensor-esp-32/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: config.rs  core.rs  exp_utils.rs  ingestion.rs  main.rs  model.rs  persistence.rs  simulation.rs
grafana/provisioning/datasources/: influxdb.yaml
