[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
noise = "0.9.0"
tokio = {version = "1.50.0", features = ["full"]}
tokio-stream = "0.1.18"
influxdb = { version = "0.8.0", features = ["derive"] }
async-stream = "0.3.6"
clap = { version = "4.0", features = ["derive", "env"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
futures-util = "0.3.32"
futures = "0.3.32"
serde_json = "1.0.149"
itertools = "0.14.0"
anyhow = "1.0.102"
backon = "1.6.0"
